# Quantized-Local-Zernike-Moments

./: CMakeLists.txt  QLZM.cpp  QLZM.h  README.md  main.cpp
